@@ -5,6 +5,7 @@
 * Changed storage_details() to return hash without wrapper hash (Samu Voutilainen)
 * Ensured stop_server will return nil in case of error in stopping (Samu Voutilainen)
 * Changed server_details() to return details hash directly and documented the method properly (Samu Voutilainen)
+* Removed templates method. storages(type: "template") can be used instead. (Samu Voutilainen)
 
 === 1.5.0 / 2016-04-22
 
